--- a/DouYuTV/DouYuTV/Base.lproj/Home.storyboard
+++ b/DouYuTV/DouYuTV/Base.lproj/Home.storyboard
@@ -4,14 +4,15 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="QFx-q2-UIk">
             <objects>
-                <viewController id="nHN-gZ-zuj" sceneMemberID="viewController">
+                <viewController id="nHN-gZ-zuj" customClass="HomeViewController" customModule="DouYuTV" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Bsp-fQ-fZr"/>
                         <viewControllerLayoutGuide type="bottom" id="wAE-Ds-u4T"/>
