--- a/DouYuTV/DouYuTV/Classes/Home/View/CollectionHeaderView.xib
+++ b/DouYuTV/DouYuTV/Classes/Home/View/CollectionHeaderView.xib
@@ -4,18 +4,17 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR" customClass="CollectionHeaderView" customModule="DouYuTV" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z6K-c0-TgZ">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z6K-c0-TgZ" customClass="CollectionHeaderView" customModule="DouYuTV" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="10"/>
                     <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -58,6 +57,10 @@
                 <constraint firstItem="DJ6-LE-Npt" firstAttribute="leading" secondItem="5ud-O2-R4D" secondAttribute="trailing" constant="10" id="wiZ-Cf-4UE"/>
                 <constraint firstAttribute="trailing" secondItem="z6K-c0-TgZ" secondAttribute="trailing" id="xc7-5j-Qxg"/>
             </constraints>
+            <connections>
+                <outlet property="iconImageView" destination="5ud-O2-R4D" id="Yj3-2Y-h8O"/>
+                <outlet property="titleLabel" destination="DJ6-LE-Npt" id="BT7-Mx-Z90"/>
+            </connections>
             <point key="canvasLocation" x="282" y="-47"/>
         </collectionReusableView>
     </objects>
