--- a/DouYuTV/DouYuTV/Classes/Main/View/CollectionNormalCell.xib
+++ b/DouYuTV/DouYuTV/Classes/Main/View/CollectionNormalCell.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -70,6 +69,12 @@
                 <constraint firstItem="yDU-xo-17S" firstAttribute="centerY" secondItem="5JY-vj-JiV" secondAttribute="centerY" id="u6I-RR-vDK"/>
             </constraints>
             <size key="customSize" width="241" height="183"/>
+            <connections>
+                <outlet property="iconImageView" destination="iJR-Zp-ILW" id="BRk-lN-Oc4"/>
+                <outlet property="nicknameLabel" destination="SwT-oZ-1Xy" id="rWB-sC-Ypu"/>
+                <outlet property="onlineBtn" destination="bfH-wd-17e" id="e1d-hW-RMR"/>
+                <outlet property="roomNameLabel" destination="yDU-xo-17S" id="4eG-bQ-SWc"/>
+            </connections>
             <point key="canvasLocation" x="228.5" y="-48.5"/>
         </collectionViewCell>
     </objects>
