--- a/DouYuTV/DouYuTV/Classes/Home/View/RecommendCycleView.xib
+++ b/DouYuTV/DouYuTV/Classes/Home/View/RecommendCycleView.xib
@@ -25,10 +25,11 @@
                     </collectionViewFlowLayout>
                     <connections>
                         <outlet property="dataSource" destination="iN0-l3-epB" id="Gnq-XU-xpf"/>
+                        <outlet property="delegate" destination="iN0-l3-epB" id="aKh-wf-Pps"/>
                     </connections>
                 </collectionView>
                 <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="SX0-CA-v5w">
-                    <rect key="frame" x="326" y="113" width="39" height="37"/>
+                    <rect key="frame" x="326" y="116" width="39" height="37"/>
                     <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="currentPageIndicatorTintColor" red="1" green="0.64096604889999997" blue="0.42051425440000001" alpha="1" colorSpace="calibratedRGB"/>
                 </pageControl>
@@ -37,7 +38,7 @@
             <constraints>
                 <constraint firstItem="e09-Rx-Mxv" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="4r6-7k-8vU"/>
                 <constraint firstAttribute="bottom" secondItem="e09-Rx-Mxv" secondAttribute="bottom" id="9mJ-Xq-qRe"/>
-                <constraint firstAttribute="bottom" secondItem="SX0-CA-v5w" secondAttribute="bottom" id="Gks-At-kPN"/>
+                <constraint firstAttribute="bottom" secondItem="SX0-CA-v5w" secondAttribute="bottom" constant="-3" id="Gks-At-kPN"/>
                 <constraint firstAttribute="trailing" secondItem="SX0-CA-v5w" secondAttribute="trailing" constant="10" id="MSN-1M-0DP"/>
                 <constraint firstItem="e09-Rx-Mxv" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="geb-NB-cYp"/>
                 <constraint firstAttribute="trailing" secondItem="e09-Rx-Mxv" secondAttribute="trailing" id="h50-wI-tXT"/>
