--- a/DouYuTV/DouYuTV/Classes/Home/View/RecommendGameView.xib
+++ b/DouYuTV/DouYuTV/Classes/Home/View/RecommendGameView.xib
@@ -16,7 +16,7 @@
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="jmu-Af-X7n">
                     <rect key="frame" x="0.0" y="0.0" width="380" height="90"/>
-                    <color key="backgroundColor" red="0.49846232440062599" green="0.41944596223853547" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="EqT-No-0h2">
                         <size key="itemSize" width="80" height="90"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
