--- a/DouYuTV/DouYuTV/Classes/Home/View/CollectionGameCell.xib
+++ b/DouYuTV/DouYuTV/Classes/Home/View/CollectionGameCell.xib
@@ -5,13 +5,12 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CollectionGameCell" customModule="DouYuTV" customModuleProvider="target">
+        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CollectionGameCell" customModule="DouYuTV" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -20,9 +19,6 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="英雄联盟" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vAc-V6-JYu">
                         <rect key="frame" x="15" y="65" width="50" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="hbr-40-UW1"/>
-                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <nil key="highlightedColor"/>
@@ -30,7 +26,8 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dgM-en-HZu">
                         <rect key="frame" x="18" y="15" width="45" height="45"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="dgM-en-HZu" secondAttribute="height" multiplier="1:1" id="uBC-Je-sAx"/>
+                            <constraint firstAttribute="width" constant="45" id="A4F-Li-hky"/>
+                            <constraint firstAttribute="height" constant="45" id="IPq-Rm-R9r"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -39,14 +36,24 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
+                    <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Myn-hG-E8V">
+                        <rect key="frame" x="0.0" y="90" width="80" height="1"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="6V0-rt-7gF"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="vAc-V6-JYu" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Sir-Ow-1CT"/>
-                <constraint firstItem="dgM-en-HZu" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="YDa-2K-NC0"/>
-                <constraint firstItem="vAc-V6-JYu" firstAttribute="top" secondItem="dgM-en-HZu" secondAttribute="bottom" constant="5" id="YN0-Ef-J3J"/>
-                <constraint firstItem="dgM-en-HZu" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="ZGs-po-Uij"/>
-                <constraint firstAttribute="bottom" secondItem="vAc-V6-JYu" secondAttribute="bottom" constant="10" id="gpl-Ex-Itn"/>
+                <constraint firstAttribute="bottom" secondItem="Myn-hG-E8V" secondAttribute="bottom" constant="-1" id="1yU-0z-avk"/>
+                <constraint firstItem="dgM-en-HZu" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="5cn-SJ-mCd"/>
+                <constraint firstItem="vAc-V6-JYu" firstAttribute="top" secondItem="dgM-en-HZu" secondAttribute="bottom" constant="5" id="6Ak-ct-M0p"/>
+                <constraint firstItem="dgM-en-HZu" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="8Ti-SH-AlA"/>
+                <constraint firstItem="vAc-V6-JYu" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="VFm-X0-yA1"/>
+                <constraint firstAttribute="trailing" secondItem="Myn-hG-E8V" secondAttribute="trailing" id="lKo-8X-pdr"/>
+                <constraint firstItem="dgM-en-HZu" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" constant="-8" id="zRu-pG-aq2"/>
+                <constraint firstItem="Myn-hG-E8V" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="zjZ-Dr-gNU"/>
             </constraints>
             <size key="customSize" width="166" height="154"/>
             <connections>
