--- a/DouYuTV/DouYuTV/Base.lproj/Home.storyboard
+++ b/DouYuTV/DouYuTV/Base.lproj/Home.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,7 +30,7 @@
         <!--首页-->
         <scene sceneID="eg3-kD-mNn">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nCq-qx-tS6" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nCq-qx-tS6" customClass="CustomNavigationController" customModule="DouYuTV" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="首页" image="btn_home_normal" selectedImage="btn_home_selected" id="4om-4t-t0Y"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
